syntax = "proto3";

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}